# icp-hackathon

./: .gitpod  AIFlow.md  AUDIT_FIXES.md  CHAT_INTEGRATION_GUIDE.md  Cargo.toml  INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  REACT_QUERY_REFACTOR.md  README.md  canister_ids.json  dfx.json  icp-hackathon-backend.did  package-lock.json  package.json  tsconfig.json
src/icp-hackathon-backend/: Cargo.toml  icp-hackathon-backend.did  lib.rs
src/icp-hackathon-backend/src/: canister.rs  category.rs  chat.rs  config.rs  handlers.rs  lib.rs  listing.rs  review.rs  user.rs  websocket.rs
src/icp-hackathon-frontend/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.js.timestamp-1755720386508-6bce1f7698cc1.mjs  vite.config.js.timestamp-1755904943712-2ed20a735be02.mjs
src/icp-hackathon-frontend/src/: App.jsx  index.scss  main.jsx
src/icp-hackathon-frontend/src/AddListing/: AddListing.jsx  AddListing.scss
src/icp-hackathon-frontend/src/Auth/: AuthDialog.jsx  AuthDialog.scss
src/icp-hackathon-frontend/src/Cart/: Cart.jsx
src/icp-hackathon-frontend/src/Favorites/: Favorites.jsx  Favorites.scss
src/icp-hackathon-frontend/src/Header/: Header.jsx  Header.scss  Header_backup.jsx  Header_new.jsx
src/icp-hackathon-frontend/src/Home/: Home.jsx  Home.scss
src/icp-hackathon-frontend/src/ListingDetails/: ListingDetails.jsx  ListingDetails.scss
src/icp-hackathon-frontend/src/Profile/: Profile.jsx  Profile.scss
src/icp-hackathon-frontend/src/common/: Button.jsx  Button.scss  sampleChatData.js
src/icp-hackathon-frontend/src/store/: store.js
(+67 files in other folders)
