[package]
name = "icp-hackathon-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.4"
ic-websocket-cdk = "0.1.0"

[lib]
crate-type = ["cdylib"]




